[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pjt-scheduling"
version = "0.1.0"
description = "Equipment transition scheduling with imitation learning and PPO"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "gymnasium>=0.29",
    "stable-baselines3>=2.2",
    "torch>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
oracle = ["oracledb>=2.0"]
rl = ["stable-baselines3>=2.2", "torch>=2.0"]

[project.scripts]
scheduling-rl = "run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "biz*"]
