[project]
name = "pjt_scheduler"
version = "0.1.0"
description = "Equipment switching scheduler with imitation + reinforcement learning."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.1",
]
oracle = [
    "oracledb>=2.0",
]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "biz*"]
